<resources>
    <string name="app_name">Golaso</string>
    <string name="icon_fav">Favoritos</string>
    <string name="icon_clasificacion">Clasificación</string>
    <string name="icon_perfil">Perfil</string>
    <string name="icon_partidos">Partidos</string>
    <string name="icon_buscar">Buscar</string>
    <string name="title_search">Búsqueda</string>
    <string name="title_fav">Favoritos</string>
    <string name="title_profile">Perfil</string>
    <string name="title_clasificaction">Clasificación</string>
    <string name="teams">Equipos</string>
    <string name="players">Jugadores</string>
...
    <string name="pt">Puntos:</string>
    <string name="submit">Publicar</string>
    <string name="cancel">Cancelar</string>
    <string name="commentTittle">Nuevo comentario</string>
    <string name="share">Compartir</string>
    <string name="myFavs">Mis favoritos</string>
    <string name="sTeamList">Buscar equipo</string>
    <string name="sPlayerList">Buscar jugador</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="playerPos">Posición:</string>
    <string name="player">Jugador</string>
    <string name="Team">Equipo</string>
    <string name="SearchPlayer">Buscar jugador</string>
...
