...
        android:title="@string/icon_fav"
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_favoritos"
        />
    <item
        android:title="@string/icon_buscar"
        android:id="@+id/nav_buscar"
        android:icon="@drawable/ic_search"
        />
    <item
        android:title="@string/icon_clasificacion"
        android:id="@+id/nav_table"
        android:icon="@drawable/ic_clasificacion"
...
